data/raw_logs/syntactic/syn_10.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_10.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_10.c:1:24: error: expected identifier or '(' before ',' token
    1 | int main() { int x = 5,, 2; }
      |                        ^
